Sun Jun  3 19:47:18 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* thread.c (vm_living_thread_num): suppress a warning.

Sun Jun  3 17:23:52 2012  Tanaka Akira  <akr@fsij.org>

	* use execve() to preserve environment variables when exec method is
	  failed.  [ruby-core:44093] [ruby-trunk - Bug #6249]

	* include/ruby/intern.h (rb_exec_arg): add envp_str and envp_buf field
	  to store envp of execve().

	* process.c (proc_exec_v): takes envp_str as an argument and use it
	  for execve().
	  (rb_proc_exec_ne): extended version of rb_proc_exec_n().
	  (rb_proc_exec_n): use rb_proc_exec_ne().
	  (rb_proc_exec): follow proc_exec_v() change.
	  (fill_envp_buf_i): new function.
	  (rb_exec_arg_fixup): set up envp_str and envp_buf.
	  (save_env_i): removed.
	  (save_env): removed.
	  (rb_run_exec_options_err): don't modify environment variables.
	  (rb_exec_err): use rb_proc_exec_ne().

Sun Jun  3 16:33:58 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c: revert r35879 "now marshal_{load|dump} are external."

	* complex.c (nucomp_marshal__{dump,load}): should use rb_marshal_{dump,load}.

	* rational.c (nurat_marshal__{dump,load}): ditto.

Sun Jun  3 14:13:58 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: checks whether the object is frozen or not.

Sun Jun  3 14:00:51 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c: wrote Complex#_dump and Complex::load.  But now
	  disabled (due to compatibility) [experimental].

	* rational.c: wrote Rational#_dump and Rational::load. ditto.

Sun Jun  3 10:23:32 2012  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (nucomp_marshal_load): [ruby-core:45394]
	* rational.c (nurat_marshal_load): ditto.

Sun Jun  3 03:15:46 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* regparse.c (onig_number_of_names): suppress a warning.

Sun Jun  3 01:36:52 2012  Koichi Sasada  <ko1@atdot.net>

	* vm_backtrace.c: change names.
	  (1) Class name: RubyVM::FrameInfo -> RubyVM::Backtrace::Location.